<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".SettingsActivity"
        tools:showIn="@layout/config_recycler_view_add">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/settingsIntervalValueField"
            android:layout_width="202dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/settingsIntervalValueFieldHint"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsIntervalNameField"
            app:layout_constraintVertical_bias="0.171" />

        <NumberPicker
            android:id="@+id/settingsIntervalTimeFieldValueYears"
            android:layout_width="33dp"
            android:layout_height="34dp"
            android:layout_marginTop="11dp"
            android:ems="10"
            android:hint="@string/settingsIntervalValueFieldHint"
            android:inputType="number"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/settingsIntervalTimeValue"
            app:layout_constraintTop_toBottomOf="@+id/settingsIntervalTimeValue"
            app:layout_constraintVertical_bias="0.0" />

        <NumberPicker
            android:id="@+id/settingsIntervalTimeFieldValueMonths"
            android:layout_width="33dp"
            android:layout_height="34dp"
            android:ems="10"
            android:hint="@string/settingsIntervalValueFieldHint"
            android:inputType="number"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/settingsIntervalTimeValueYears"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.778" />

        <TextView
            android:id="@+id/settingsIntervalTimeValueMonths"
            android:layout_width="86dp"
            android:layout_height="35dp"
            android:padding="2dp"
            android:text="@string/settingsIntervalTimeValueMonths"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/settingsIntervalTimeFieldValueMonths"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.781" />

        <TextView
            android:id="@+id/settingsIntervalTimeValueYears"
            android:layout_width="57dp"
            android:layout_height="34dp"
            android:padding="2dp"
            android:text="@string/settingsIntervalTimeValueYears"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/settingsIntervalTimeFieldValueYears"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.778" />

        <EditText
            android:id="@+id/settingsIntervalNameField"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/settingsIntervalNameFieldHint"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/settingsIntervalAddAccept"
            android:layout_width="95dp"
            android:layout_height="50dp"
            android:text="@string/settingsIntervalAddAccept"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/settingsIntervalTimeFieldValueYears"
            app:layout_constraintTop_toBottomOf="@+id/settingsIntervalTimeFieldValueYears"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/settingsIntervalAddCancel"
            android:layout_width="95dp"
            android:layout_height="50dp"
            android:text="@string/settingsIntervalAddCancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/settingsIntervalTimeValueMonths"
            app:layout_constraintHorizontal_bias="0.969"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsIntervalTimeValueMonths"
            app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/serviceItemAddVinTitle"
                android:layout_width="210dp"
                android:layout_height="23dp"
                android:text="@string/settingsIntervalName"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/settingsIntervalNameField"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/settingsIntervalValue"
                android:layout_width="210dp"
                android:layout_height="23dp"
                android:layout_marginTop="6dp"
                android:text="@string/settingsIntervalValue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/settingsIntervalValueField"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settingsIntervalNameField" />

            <TextView
                android:id="@+id/settingsIntervalTimeValue"
                android:layout_width="206dp"
                android:layout_height="27dp"
                android:layout_marginTop="56dp"
                android:text="@string/settingsIntervalTimeValue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settingsIntervalValue"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>