<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".SettingsActivity"
        tools:showIn="@layout/activity_settings">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/timeColumnLabel"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginBottom="4dp"
                android:text="@string/unitsColumnLabelTime"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/configItemList"
                app:layout_constraintEnd_toStartOf="@+id/unitColumnLabel"
                app:layout_constraintHorizontal_bias="0.89"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                app:layout_constraintVertical_bias="0.9" />

            <TextView
                android:id="@+id/unitColumnLabel"
                android:layout_width="38dp"
                android:layout_height="25dp"
                android:layout_marginBottom="4dp"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/configItemList"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.93"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                app:layout_constraintVertical_bias="1.0" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/configItemList"
                android:layout_width="match_parent"
                android:layout_height="560dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/intervalsLabel"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="9dp"
                android:text="@string/intervalsLabel"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/configItemList"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarSettings"
                android:layout_width="420dp"
                android:layout_height="70dp"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintBottom_toTopOf="@+id/notificationsSwitch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/dropMenuSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toTopOf="@+id/mainTitleSettings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.815"
                app:layout_constraintStart_toEndOf="@+id/mainTitleSettings"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/baseline_arrow_drop_down_24" />

            <ImageButton
                android:id="@+id/backButtonSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="33dp"
                app:layout_constraintEnd_toStartOf="@+id/mainTitleSettings"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_arrow_back_24" />

            <TextView
                android:id="@+id/mainTitleSettings"
                android:layout_width="217dp"
                android:layout_height="39dp"
                android:layout_marginTop="16dp"
                android:text="@string/mainTitleSettings"
                android:textAlignment="center"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/toolbarSettings"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/notificationsSwitch"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="581dp"
                android:text="@string/notificationsSwitch"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainTitleSettings"
                app:layout_constraintVertical_bias="0.246" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="51dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.863"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notificationsSwitch">

                <RadioButton
                    android:id="@+id/rbMetric"
                    android:layout_width="146dp"
                    android:layout_height="match_parent"
                    android:text="@string/rbMetric"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rbImperial"
                    android:layout_width="146dp"
                    android:layout_height="match_parent"
                    android:text="@string/rbImperial"
                    android:textSize="20sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/unitsLabel"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="8dp"
                android:text="@string/unitsLabel"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/radioGroup"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notificationsSwitch"
                app:layout_constraintVertical_bias="0.001" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>